added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/ML-Automated-Workflows.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/ML-Automated-Workflows.ipynb
@@ -64,6 +64,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Next, we'll use the runtime parameters to configure the actual SageMaker Pipelines step for our data preprocessing tasks. You'll notice we're using all of the parameters we configured previously to build the step that will execute as part of the pipeline:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sagemaker.workflow.steps import ProcessingStep\n",
+    "\n",
+    "step_process = ProcessingStep(\n",
+    "    name=\"DataPreparation\",\n",
+    "    processor=pyspark_processor,\n",
+    "    inputs=run_args.inputs,\n",
+    "    outputs=run_args.outputs,\n",
+    "    job_arguments=run_args.arguments,\n",
+    "    code=\"modelbuild/pipelines/preprocess.py\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### First, we'll configure the SageMaker training job, as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
