added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/ML-Automated-Workflows.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/ML-Automated-Workflows.ipynb
@@ -320,6 +320,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Creating the pipeline\n",
+    "\n",
+    "#### In the preceding steps, we configured the tasks and steps that will be used as part of the model build pipeline. We now need to chain those steps together to create the SageMaker Pipeline.\n",
+    "\n",
+    "#### When configuring pipeline steps and creating a SageMaker pipeline, it is important to identify the parameters that could vary per pipeline execution and may be more dynamic. For example, the instance type for processing or training may be something you want to be able to change with each execution of your pipeline without directly modifying your pipeline code. This is where parameters become important in being able to dynamically pass in parameters at execution time. This allows you to change configurations (such as changing the instance type parameters) with each execution of your pipeline, based on different environments or as your data grows.\n",
+    "\n",
+    "#### The following code shows the chaining together of our previously configured pipeline steps, as well as identifying the parameters we want to be able to pass in on each execution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
