added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/ML-Automated-Workflows.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/ML-Automated-Workflows.ipynb
@@ -335,12 +335,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sagemaker.workflow.pipeline import Pipeline\n",
+    "\n",
+    "pipeline_name = f\"WeatherPipeline\"\n",
+    "pipeline = Pipeline(\n",
+    "    name=pipeline_name,\n",
+    "    parameters=[\n",
+    "        processing_instance_type,\n",
+    "        processing_instance_count,\n",
+    "        training_instance_type,\n",
+    "        model_approval_status,\n",
+    "        input_data\n",
+    "    ],\n",
+    "    steps=[step_process, step_train, step_eval, step_cond],\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Executing the pipeline\n",
+    "\n",
+    "#### Now that we've defined and configured our steps and the pipeline itself, we want to be able to execute the pipeline. To do this, you'll need to perform a few steps. These steps need to be performed for each pipeline execution. A pipeline can be started in multiple ways:\n",
+    "\n",
+    "- Programmatically within a notebook (as shown in the example notebook for this chapter)\n",
+    "- Under Pipelines in the SageMaker Studio UI\n",
+    "- Programmatically via another resource\n",
+    "- Through an EventBridge source triggered by an event or schedule\n",
+    "\n",
+    "#### In this section, we'll focus on the steps required to execute your pipeline from your example notebook. First, you need to submit the pipeline definition to the SageMaker Pipelines service. This is done through an upsert that passes in the IAM role as an argument. Keep in mind that an upsert will create a pipeline definition if it doesn't exist or update the pipeline if it does. Also, the role that is passed is used by SageMaker Pipelines to create and launch all of the tasks defined in the steps. Therefore, you need to ensure that the role is scoped to the API permissions you need for your pipeline. It's a best practice to only include the API permissions that are actually needed so as to avoid overly permissive roles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "json.loads(pipeline.definition())\n",
+    "pipeline.upsert(role_arn=role)\n",
+    "\n",
+    "# Once your pipeline definition is submitted, you're ready to start the pipeline using the following code:\n",
+    "execution = pipeline.start()"
+   ]
   }
  ],
  "metadata": {
