added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/Architect-Ml-Pipelines.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/Architect-Ml-Pipelines.ipynb
@@ -8,6 +8,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensuring reproducibility\n",
+    "\n",
+    "#### To successfully operationalize the end-to-end ML system, you must first ensure its reproducibility through versioned data, code, and artifacts. Best practice is to version all inputs used to create models, including training data, data preparation code, algorithm implementation code, parameters, and hyperparameters, in addition to all trained model artifacts. A versioning strategy is also about helping in the model-update phase and allowing for easy rollback to a specific known working version if a model update fails or if the updated model does not meet your requirements.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
