added new notes

--- a/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/Architect-Ml-Pipelines.ipynb
+++ b/AWS-Books/SageMaker-Best-Practices/Automate-Operationalize-ML/Architect-Ml-Pipelines.ipynb
@@ -29,7 +29,10 @@
     "\n",
     "## Monitoring production models\n",
     "\n",
-    "#### Continued monitoring of deployed models is a critical step in operationalizing ML workloads, since a model's performance and effectiveness may degrade over time. Ensuring that the model continues to meet your business needs starts with the identification of the metrics that measure both model-related metrics and business metrics. Ensure that all metrics critical to model evaluation against your business KPIs are defined early on and collected during monitoring."
+    "#### Continued monitoring of deployed models is a critical step in operationalizing ML workloads, since a model's performance and effectiveness may degrade over time. Ensuring that the model continues to meet your business needs starts with the identification of the metrics that measure both model-related metrics and business metrics. Ensure that all metrics critical to model evaluation against your business KPIs are defined early on and collected during monitoring.\n",
+    "\n",
+    "#### Once the metrics are identified, to ensure the continued high quality of the deployed model, use the Amazon SageMaker Model Monitor capabilities and its integration with CloudWatch to proactively detect issues, raise alerts, and automate remediation actions. In addition to detecting model-quality degradation, you can monitor data drift, bias drift, and feature attribution drift to meet your reliability, regulatory, and model explainability requirements.\n",
+    "\n"
    ]
   },
   {
