added new book notes

--- a/LLMS/ LLMs and Generative AI for Healthcare/Black-Box.ipynb
+++ b/LLMS/ LLMs and Generative AI for Healthcare/Black-Box.ipynb
@@ -23,7 +23,17 @@
     "\n",
     "#### After it’s been clearly and thoroughly defined, here are the typical next steps: data collection/preprocessing, model architecture design, training/optimization, evaluation/validation, deployment/monitoring in a healthcare setting. But all of these would fall apart if the problem definition was compromised.\n",
     "\n",
-    "#### In many healthcare companies, data is siloed and guarded (or “owned”) by different data teams. Many companies have no definite policy regarding data governance and access. Getting access to specific datasets is often a challenge. Training data can have gaps that affect the model’s resiliency when taken out of the “lab” and applied in clinical settings. For example, training data that is de-identified or has only a certain level of granularity due to HIPAA or GDPR may not reflect “real-world” data, and the model runs into difficulties or does not perform as expected."
+    "#### In many healthcare companies, data is siloed and guarded (or “owned”) by different data teams. Many companies have no definite policy regarding data governance and access. Getting access to specific datasets is often a challenge. Training data can have gaps that affect the model’s resiliency when taken out of the “lab” and applied in clinical settings. For example, training data that is de-identified or has only a certain level of granularity due to HIPAA or GDPR may not reflect “real-world” data, and the model runs into difficulties or does not perform as expected.\n",
+    "\n",
+    "#### One way to complement both an open source and proprietary foundation model is retrieval-augmented generation (RAG), discussed previously. It adds to the model’s knowledge so it can extend past what it got a chance to ingest in pretraining; in inference time, it can match contextual documents (for example, website data, patient records, and so on) and condition its outputs on them. It is an easy addition, bolting on domain-specific corpora to the model without touching the fundamentals.\n",
+    "\n",
+    "#### Prompt engineering for LLMs means very carefully selecting the textual cues incorporated into the prompt to guide the output of a model. This is a departure from how we interact with search engines, which take a static query and find the corresponding static answer. Prompting is different: not only is the query continuous text that carries information about context, constraints, and objectives, but it also forms part of an ongoing signaling process between a user and an open-ended LLM.\n",
+    "\n",
+    "#### Signals from testing cycles will flag places in which the model is promptly susceptible to noise delivering hallucinations probably due to the dearth of external contextual reinforcement, where those false positives then flood in. For example, the LLM is trained to analyze and interpret radiology images like X-rays or CT scans to detect abnormalities or signs of a disease. If the training dataset for the LLM was limited or lacked external validation from a radiologist, the LLM might hallucinate and falsely identify an abnormality.\n",
+    "\n",
+    "#### In other circumstances, training with contrast cases, or artificially inserting objects into the input stream (both positive and negative examples), enables the model to learn to discern small differences. This coded feedback could serve as constant feedback loops that refined the art of prompting, allowing engineers to chisel, shape, and direct model behavior. This loop causes prompting to become as much art as science.\n",
+    "\n",
+    "#### "
    ]
   },
   {
