added new book notes

--- a/LLMS/ LLMs and Generative AI for Healthcare/Beyond-White-Coates.ipynb
+++ b/LLMS/ LLMs and Generative AI for Healthcare/Beyond-White-Coates.ipynb
@@ -15,6 +15,14 @@
     "\n",
     "#### The intricate balance of influence and power requires oversight to ensure that predictive models respect the psychological, economic, and environmental complexities that impact the personal, and not just the actuarial, reliability of modeling the individual risks for both manageability and affordability. The ultimate responsibility for health must remain with each individual.\n",
     "\n",
+    "#### Now, though, they are waving this LLM magic into EHRs. The models peruse patient records looking for clues about medication nonadherence, triggering alerts to flag potentially problematic situations, and enabling doctors to intervene early. Now begins an endless future of possibilities, from personalized medicine to preventive care.\n",
+    "\n",
+    "#### Once scrawls on a page, these texts are now mines of bioinformation waiting for interpretation. Using LLMs trained on clinical texts corpora, one may find patterns of language indicating implicit bias that may occur based on race, gender, socioeconomic status, and other determinants of health. An LLM might flag certain notes that present a more negative language frame for group “X,” for example, than for group “Y.”\n",
+    "\n",
+    "#### Imagine an LLM combing through radiology reports for rich context such as descriptions of abnormalities, their locations, and interpretations while being alerted when it finds matches for disease signatures. No more tedious manual parsing! LLMs instantly index and retrieve high-yield finding descriptions (those most relevant and likely to impact diagnosis or treatment), and they provide radiologists with a leg up in making a diagnosis. Finally, the radiologist has a personal assistant tirelessly scanning the reports on their behalf, highlighting key clues for an expert’s gaze.\n",
+    "\n",
+    "#### \n",
+    "\n",
     "\n"
    ]
   }
